Change from id to class

--- a/Assignments/#1/index.html
+++ b/Assignments/#1/index.html
@@ -11,7 +11,7 @@
 	<hr>
 	<p>What are HTML elements?</p>
 	<ol type="A">
-		<li id= "right_answer">The components of the HTML code</li>
+		<li class="right_answer">The components of the HTML code</li>
 		<li>The links to external CSS and javascript files</li>
 		<li>The lines of code that indicate styling</li>
 		<li>The commands that dynamically change content in a page</li>		
@@ -21,7 +21,7 @@
 	<p>The &ltstyle&gt element must be located inside:</p>
 	<ol type= "A"> 
 		<li>The &ltbody&gt element</li>
-		<li id= "right_answer">The &lthead&gt element</li>
+		<li class="right_answer">The &lthead&gt element</li>
 		<li>The &ltscript&gt element</li>
 		<li>The &ltdiv&gt element</li>
 	</ol>
@@ -31,7 +31,7 @@
 	<ol type= "A">
 		<li>&ltparagraph&gt</li>
 		<li>&ltpar&gt</li>
-		<li id= "right_answer">&ltp&gt</li>
+		<li class="right_answer">&ltp&gt</li>
 		<li>&ltpre&gt</li>
 	</ol>
 	<h2>CSS</h2>
@@ -40,7 +40,7 @@
 	<p>What the CSS language is used for?</p>
 	<ol type="A">
 		<li>The content of the web page</li>
-		<li id= "right_answer">The styling of the web page</li>
+		<li class="right_answer">The styling of the web page</li>
 		<li>The interaction with the web page</li>
 		<li>The Loading speed of the web page</li>
 	</ol>
