Flash card updates

--- a/Assignments/Flashcard App/Final/start.html
+++ b/Assignments/Flashcard App/Final/start.html
@@ -1,47 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="start.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Quiz Topic Selection</title>
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="start.css">
+
+	
+
 </head>
 <body>
-	<h1>Select Topics</h1>
-	<div>
-		<form>
-			<label>
-			<input type="checkbox" name="chBoxGroup" value="HTML"/> HTML
-			</label>
-			<br/>
-			<p>Questions Mastered: 32/100</p>
-			<progress value="32" max="100"></progress>
-			<hr/>
+	<header>
+		<h1>Select Topics</h1>	
+	</header>
+	<main>
+			<div id="topicList" class="card"></div>
+			<button id="start_btn" class="primary" disabled>Start Quiz</button>
+		
+	</main>
 
-			<label>
-			<input type="checkbox" name="chBoxGroup" value="CSS" checked=""/> CSS
-			</label>
-			<br/>
-			<p>Questions Mastered: 76/100</p>
-			<progress value="76" max="100"></progress>
-			<hr/>
+	<script type="text/javascript" src="data2.js"></script>
+	<script type="text/javascript" src="start3.js"></script>
 
-			<label>
-			<input type="checkbox" name="chBoxGroup" value="Javascript"/> Javascript
-			</label>
-			<br/>
-			<p>Questions Mastered: 45/100</p>
-			<progress value="45" max="100"></progress>
-			<hr/>
-
-			<label>
-			<input type="checkbox" name="chBoxGroup" value="Accessibility"/> Accessibility
-			</label>
-			<br/>
-			<p>Questions Mastered: 23/100</p>
-			<progress value="23" max="100"></progress>
-		</form>
-
-		<button>Start Quiz</button>
-	</div>
 </body>
 </html>
