--- a/Assignments/Flashcard App/Final/Quiz_full.html
+++ b/Assignments/Flashcard App/Final/Quiz_full.html
@@ -22,13 +22,26 @@
 	</div>
 
 	<footer>
-			<div id="left_elements">
+		<div id="left_elements">
 			<div id="progressDots">
 				<!-- <div class="dot incorrect"></div> -->
 			</div>
 				<a href="">View Report</a>
 			</div>
-			<button id="check_answer">Check Answer</button>
+		</div>
+
+		<div id="feedbackContainer" class="correct hide">
+			<h4>Nice job!</h4>
+			<p>Feedback will go here</p>
+		</div>
+
+		<div id="footerActions">
+			<button id="check_answer" disabled>Check Answer</button>
+			<nav id="navQuestions" class="hide">
+				<button id="previous_btn" class="secondary" disabled="true">previous</button>
+				<button id="next_btn" class="secondary">next</button>
+			</nav>
+		</div>
 	</footer>
 
 	<script type="text/javascript" src="data.js"></script>
